// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TgwCrossAccountResources ghost-entry regression guards > createTgwAssociation method body snapshot 1`] = `
"{
    for (const routeTableItem of tgwAttachmentItem.routeTableAssociations ?? []) {
      const attachmentId = transitGatewayAttachments[tgwAttachmentItem.name];
      if (!attachmentId) continue;
      const tgwAssociationRes = this.associationResources.find(
        association =>
          this.matchesAttachmentId(
            association.resourceMetadata['Properties'].TransitGatewayAttachmentId,
            attachmentId,
          ) &&
          association.resourceMetadata['Properties'].TransitGatewayRouteTableId ===
            this.getTgwRouteTableId(routeTableItem, mapping),
      );
      if (!tgwAssociationRes) continue;
      const association = this.scope.getResource(
        tgwAssociationRes.logicalResourceId,
      ) as cdk.aws_ec2.CfnTransitGatewayRouteTableAssociation;
      if (!association) {
        this.scope.addLogs(
          LogLevel.WARN,
          \`TGW Association for "\${tgwAttachmentItem.name}/\${routeTableItem}" exists in Mapping but not found in resources\`,
        );
      }
      // Propagation resourceId is not used anywhere in LZA. No need of SSM Parameter.
      this.scope.addAseaResource(
        AseaResourceType.TRANSIT_GATEWAY_ASSOCIATION,
        \`\${accountName}/\${tgwAttachmentItem.transitGateway.name}/\${tgwAttachmentItem.name}/\${routeTableItem}\`,
      );
    }
  }"
`;

exports[`TgwCrossAccountResources ghost-entry regression guards > createTgwPropagations method body snapshot 1`] = `
"{
    for (const routeTableItem of tgwAttachmentItem.routeTablePropagations ?? []) {
      const attachmentId = transitGatewayAttachments[tgwAttachmentItem.name];
      if (!attachmentId) continue;
      const tgwPropagationRes = this.propagationResources.find(
        propagation =>
          this.matchesAttachmentId(
            propagation.resourceMetadata['Properties'].TransitGatewayAttachmentId,
            attachmentId,
          ) &&
          propagation.resourceMetadata['Properties'].TransitGatewayRouteTableId ===
            this.getTgwRouteTableId(routeTableItem, mapping),
      );
      if (!tgwPropagationRes) continue;
      const propagation = this.stack.getResource(
        tgwPropagationRes.logicalResourceId,
      ) as cdk.aws_ec2.CfnTransitGatewayRouteTablePropagation;
      if (!propagation) {
        this.scope.addLogs(
          LogLevel.WARN,
          \`TGW Propagation for "\${tgwAttachmentItem.name}/\${routeTableItem}" exists in Mapping but not found in resources\`,
        );
      }
      // Propagation resourceId is not used anywhere in LZA. No need of SSM Parameter.
      this.scope.addAseaResource(
        AseaResourceType.TRANSIT_GATEWAY_PROPAGATION,
        \`\${accountName}/\${tgwAttachmentItem.transitGateway.name}/\${tgwAttachmentItem.name}/\${routeTableItem}\`,
      );
    }
  }"
`;

exports[`TgwCrossAccountResources ghost-entry regression guards > getTgwAttachmentId method body snapshot 1`] = `
"{
    const vpcStacksInfo: ASEAMapping[] = [];
    Object.keys(mapping).forEach(key => {
      const stack = mapping[key];
      if (stack.accountKey === accountKey && stack.phase === '1' && stack.region === region) {
        stack.cfnResources = this.loadResourcesFromFile(stack);
        vpcStacksInfo.push(stack);
        if (stack.nestedStacks) {
          for (const nestedStack of Object.values(stack.nestedStacks)) {
            nestedStack.cfnResources = this.loadResourcesFromFile(nestedStack);
            vpcStacksInfo.push(nestedStack);
          }
        }
      }
    });

    let vpcStack: ASEAMapping | undefined;
    for (const vpcStackInfo of vpcStacksInfo) {
      const vpcResource = this.findResourceByTypeAndTag(
        vpcStackInfo.cfnResources,
        RESOURCE_TYPE.VPC,
        getAseaConfigVpcName(vpcName),
      );
      if (vpcResource) {
        vpcStack = vpcStackInfo;
        break;
      }
    }
    if (!vpcStack) {
      this.scope.addLogs(LogLevel.INFO, \`VPC "\${vpcName}" didn't find in ASEA Resource mapping\`);
      return;
    }
    const tgwAttachmentResources = this.filterResourcesByType(vpcStack.cfnResources, RESOURCE_TYPE.TGW_ATTACHMENT);
    if (tgwAttachmentResources.length === 0) return;
    const tgwAttachment = tgwAttachmentResources.find(tgwAttachResource =>
      tgwAttachResource.resourceMetadata['Properties'].Tags.find(
        (tag: { Key: string; Value: string }) => tag.Key === 'Name' && tag.Value === tgwAttachmentName,
      ),
    );
    if (!tgwAttachment) return;
    return tgwAttachment.physicalResourceId;
  }"
`;

exports[`TgwCrossAccountResources ghost-entry regression guards > setTransitGatewayIds method body snapshot 1`] = `
"{
    // Loop through attachment owner accounts
    for (const owningAccount of accountNames) {
      const tgwAttachmentId = this.getTgwAttachmentId(
        vpcItem.name,
        tgwAttachmentItem.name,
        this.props.mapping,
        owningAccount,
        vpcItem.region,
      );
      if (tgwAttachmentId) transitGatewayAttachments[tgwAttachmentItem.name] = tgwAttachmentId;
    }
  }"
`;
